# AI-ResumeMaker

./: README.md  app.py  pyproject.toml  render.yaml  requirements.txt  resume_app.db
backend/: Dockerfile  ai_utils.py  auth.py  database.py  main.py  requirements.txt  schemas.py
frontend/: Dockerfile  app.py  requirements.txt
frontend/modules/: resume_generator.py
frontend/templates/: template1.py
modules/: ai_utils.py  resume_generator.py
templates/: template1.py
